# TWON-Exploration

./: .gitignore  00--Data-Processing.ipynb  01--Data-Aggregation.ipynb  01--Data-Description.ipynb  02--Data-Description.ipynb  10--Validation-Prompt-based-embedding-enhancing.ipynb  11--Dataset-for-Coding.ipynb  20--Prompt-Classify.ipynb  21--Embedding-Distances.ipynb  22--Embedding-Visualization.ipynb  23--HF-Classify.ipynb  23--Validation-Prompt-based-embedding-enhancing-for-diversity.ipynb  24--Validation-Prompt-based-embedding-enhancing-for-diversity.ipynb  25--Testing-Model-Performance-on-Embedding-Distance-Extraction.ipynb  26--Classify PublicSphere-benchmark.ipynb  27--Classify PublicSphere-paper_2024.ipynb  31--claim-mining.ipynb  31b-Claim-mining_sandbox.ipynb  32--Human-LLM-Agreement-on-Publicphere.ipynb  33--Diversity of PublicSphere-data.ipynb  33--Diversity of PublicSphere-data_sep24.ipynb  33b-Diversity of PublicSphere-data Snellius_output.ipynb  34--Diversity-of-Coarse-Discourse.ipynb  35--Ideology of MH-BClemm data.ipynb  36--Expansion-Difference-Diversity-of-Coarse-Discourse.ipynb  37--BERT-topic-for-claims.ipynb  38--Prompt-diversity-PublicSphere-data.ipynb  38--Prompt-diversity-classification-PublicSphere-data.ipynb  39--AzureGPT4o_deliberation_metrics.ipynb  39--Jaidka_GPT4o_deliberation_metrics.ipynb  40--Quality-TWON-Train-data.ipynb  41--Prompt-diversity-evaluation.ipynb  42--Naab_deliberation_metrics.ipynb  43--TWON_pairdata.ipynb  50--GLLM-annotation-bias-analysis.ipynb  50--GLLM-annotation-bias-annotation.ipynb  51--GLLM-annotation-bias-clean.ipynb  (+7 more)
(+133 files in other folders)
