[tool.poetry]
name = "twon-metrics"
version = "0.1.0"
description = ""
authors = ["simon-muenker <simon.muenker@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pydantic = "^2.7.1"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
