[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pydantic = "^2.7.1"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
torch = "^2.3.0"
transformers = "^4.41.0"
scikit-learn = "^1.5.0"
plotly = "^5.22.0"
faker = "^30.8.0"
setfit = "^1.1.0"
datasets = "^3.0.2"
